--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tutorial request</title>
+    <title>Tutorial Requests</title>
     <!-- stylesheets -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+  </head>
   <body>
+
     <!-- auth modals -->
     <div class="auth open">
-      <div class="modal active">
+      <div class="modal">
         <h2>Login</h2>
         <form class="login">
           <input type="text" name="email" placeholder="Email">
@@ -62,19 +64,19 @@
           </div>
         </li>
       </ul>
-      <button class="call">Say Hello</button>
+      <!-- <button class="call">Say hello</button> -->
     </section>
+    
+    <!-- update the version number as needed -->
+    <script src="/__/firebase/7.7.0/firebase-app.js"></script>
+    <!-- include only the Firebase features as you need -->
+    <script src="/__/firebase/7.7.0/firebase-auth.js"></script>
+    <script src="/__/firebase/7.7.0/firebase-firestore.js"></script>
+    <script src="/__/firebase/7.7.0/firebase-functions.js"></script>
+    <!-- initialize the SDK after all desired features are loaded -->
+    <script src="/__/firebase/init.js"></script>
 
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/7.15.1/firebase-app.js"></script>
-    <script src="/__/firebase/7.15.1/firebase-functions.js"></script>
-    <script src="/__/firebase/7.15.1/firebase-firestore.js"></script>
-    <script src="/__/firebase/7.15.1/firebase-auth.js"></script>
     <script src="js/app.js"></script>
     <script src="js/auth.js"></script>
-
-
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
   </body>
 </html>
