--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,9 @@
       </ul>
       <!-- <button class="call">Say hello</button> -->
     </section>
+
+    <!--Vue js-->
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     
     <!-- update the version number as needed -->
     <script src="/__/firebase/7.7.0/firebase-app.js"></script>
@@ -78,5 +81,6 @@
 
     <script src="js/app.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/request.js"></script>
   </body>
 </html>
