--- a/public/index.html
+++ b/public/index.html
@@ -53,13 +53,13 @@
       </nav>
     </header>
 
-    <section class="content">
+    <section class="content" id='app'>
       <h1>Tutorial Requests</h1>
       <ul class="request-list"> 
-        <li>
-          <span class="text">Laravel 6 tutorial</span>
+        <li v-for='request in requests'>
+          <span class="text">{{ request.text }}</span>
           <div>
-            <span class="votes">125</span>
+            <span class="votes">{{ request.upvotes }}</span>
             <i class="material-icons upvote">arrow_upward</i>
           </div>
         </li>
